[package]
name = "jsxn_parser"
version = "0.1.0"
authors = ["Dylan Frankland <dfrankland@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.1"
serde = { version = "1.0.104", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.48"
