[package]
name = "jsxn"
version = "0.1.0"
authors = ["Dylan Frankland <dfrankland@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "Put JSX in your JSON and JSON in your JSX!"
homepage = "https://github.com/dfrankland/jsxn-rs"
repository = "https://github.com/dfrankland/jsxn-rs"
keywords = ["json", "jsx", "jsxn", "parser"]
categories = ["encoding", "parser-implementations", "parsing", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.1"
serde = { version = "1.0.104", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.48"
